# seed

./: Cargo.toml  README.md  design.md  mise.toml  release.toml
.github/workflows/: release.yml
src/: error.rs  format.rs  main.rs  markdown.rs  ops.rs  prime.md  store.rs  task.rs  term.rs
src/markdown/: ir.rs  mod.rs
src/tui/: app.rs  event.rs  keys.rs  markdown.rs  mod.rs  ui.rs
tests/: cli.rs
