[package]
name = "seed"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sd"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
fs2 = "0.4"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
kdl = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
pulldown-cmark = { version = "0.13.1", default-features = false }
humantime = "2"
terminal_size = "0.4.3"
anstyle = "1"
anstream = "0.6"
unicode-width = "0.2"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tempfile = "3"
